[package]
name = "ct-ext-search"
version = "0.1.0"
authors = ["est31 <MTest31@outlook.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
yasna = "0.3"
pem = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = "=3.0.0-beta.2"
serde = "1.0"
ctclient = "0.4"
base64 = "0.13"
openssl = "0.10"
